@@ -71,6 +71,7 @@ Revision history for Perl module Math::Prime::Util
     - omega_primes(k,[start,]end)     array ref of k-omega-primes
     - omega_prime_count(k,n)          count nums divisible by exactly k primes
     - nth_omega_prime(k,n)            The nth number dvsbl by exactly k primes
+    - powerful_numbers([lo,]hi[,k])   array ref of k-powerful from lo to hi
     - powerful_count(n[,k])           count of k-powerful numbers <= n
     - nth_powerful(n[,k])             the nth k-powerful number (default k=2)
     - powerfree_count(n[,k])          count of k-powerfree numbers <= n
